--- a/Orbis_MLBTLD.ipynb
+++ b/Orbis_MLBTLD.ipynb
@@ -144,7 +144,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# 데이터 불러오기\n",
+    "# 데이터 불러오기(데이터 수집 과정: 특허 검색 사이트 이용)\n",
     "file_path = 'C:/Users/osbor/OneDrive/바탕 화면/회사생활/오르비스/PlantAI/ICML_Data_Allclaim.xlsx'\n",
     "df = pd.read_excel(file_path)\n",
     "df = df.iloc[:, 1:5]\n",
@@ -643,10 +643,10 @@
     "\n",
     "lda_model = models.LdaModel(\n",
     "    corpus,\n",
-    "    num_topics=3,          # 찾고 싶은 토픽 개수 지정\n",
-    "    id2word=dictionary,    # 단어 사전\n",
-    "    passes=10,             # 학습 반복 횟수\n",
-    "    random_state=42        # 재현성 확보용 시드값\n",
+    "    num_topics=3,          # 토픽 개수 지정\n",
+    "    id2word=dictionary,    # 딕셔너리 형태 \n",
+    "    passes=10,             # 모델 학습 반복 횟수\n",
+    "    random_state=42        # 난수 발생\n",
     ")\n",
     "\n",
     "topics = lda_model.print_topics(num_words=10)\n",
